resolvendo problema de estilização z-index do menu e ajustando o salvamento local

--- a/src/style.sass/BarraNav.scss
+++ b/src/style.sass/BarraNav.scss
@@ -151,6 +151,7 @@ main{
     }
 
     .active{
+        z-index: 1;
         transform: translateX(-100%);
         
     }
